--- a/admin_panel/templates/add_ad.html
+++ b/admin_panel/templates/add_ad.html
@@ -2,42 +2,40 @@
 <html lang="en">
 <body>
 {% include "header.html" %}
-<div class="row">
-    <div id="content" class="col-lg-10 col-sm-10">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="container">
-                    <div class="card col-md-offset-7 col-md-7">
-                        <h2 style="text-align: right"> افزودن تبلیغات</h2>
-                        <form role="form" action="/admin-panel/add_advertise" id="adding_ad" method="post"
-                              name="adding_cat_form" enctype="multipart/form-data">
-                            <div class="form-group" style="text-align: right">
-                                <label for="ad_name">عنوان</label>
-                                <input style="text-align: right" type="text" class="form-control" id="ad_name"
-                                       name="advertise_title" placeholder="">
-                            </div>
-                            <div class="form-group" style="text-align: right">
-                                <label for="ad_text">متن</label>
-                                <textarea style="text-align: right" class="form-control" id="ad_text"
-                                          name="advertise_text" placeholder=""></textarea>
-                            </div>
-                            <div class="form-group" style="text-align: right">
-                                <label for="ad_image">نصویر</label>
-                                <input style="text-align: right" type="file" class="form-control" id="ad_image"
-                                       name="advertise_image" placeholder="">
-                            </div>
-
-                            <button style="margin-left: 90% ; width: 10% ; font-size: medium" type="submit"
-                                    class="btn btn-primary btn-round">تایید
-                            </button>
-                        </form>
-                    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            {% include "sidebar.html" %}
+        </div>
+        <div class="card col-md-offset-1 col-md-8">
+            <h2 style="text-align: right"> افزودن تبلیغات</h2>
+            <form role="form" action="/admin-panel/add_advertise" id="adding_ad" method="post"
+                  name="adding_cat_form" enctype="multipart/form-data">
+                <div class="form-group" style="text-align: right">
+                    <label for="ad_name">عنوان</label>
+                    <input style="text-align: right" type="text" class="form-control" id="ad_name"
+                           name="advertise_title" placeholder="">
                 </div>
-            </div>
+                <div class="form-group" style="text-align: right">
+                    <label for="ad_text">متن</label>
+                    <textarea style="text-align: right" class="form-control" id="ad_text"
+                              name="advertise_text" placeholder=""></textarea>
+                </div>
+                <div class="form-group" style="text-align: right">
+                    <label for="ad_image">نصویر</label>
+                    <input style="text-align: right" type="file" class="form-control" id="ad_image"
+                           name="advertise_image" placeholder="">
+                </div>
+
+                <button style="margin-left: 90% ; width: 10% ; font-size: medium" type="submit"
+                        class="btn btn-primary btn-round">تایید
+                </button>
+            </form>
         </div>
     </div>
 </div>
-<hr>
+
+
 {% include "footer.html" %}
 </body>
 </html>
