--- a/admin_panel/templates/add_feed_cat.html
+++ b/admin_panel/templates/add_feed_cat.html
@@ -2,11 +2,14 @@
 <body>
 {% include "header.html" %}
 <div class="container">
-    <div class="card col-md-offset-6 col-md-7">
+      <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+    <div class="card col-md-offset-1 col-md-8">
         <h2 style="text-align: right"> افزودن دسته
             بندی انتقادات و پیشنهادات</h2>
 
-        <form role="form" action="/admin-panel/add_naghd" id="adding_cat" method="post"
+        <form role="form" action="/admin-panel/add_feed_cat" id="adding_cat" method="post"
               name="adding_cat_form">
 
             <div class="form-group" style="text-align: right">
