--- a/admin_panel/templates/category.html
+++ b/admin_panel/templates/category.html
@@ -4,7 +4,10 @@
 <div class="container">
         <h2 style="text-align:right">دسته بندی ها</h2>
     <div class="row">
-    <div class="col-md-offset-4 col-md-8">
+      <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+    <div class="col-md-offset-1 col-md-8">
         <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
             <thead>
             <tr>
