--- a/admin_panel/templates/codes.html
+++ b/admin_panel/templates/codes.html
@@ -2,8 +2,10 @@
 <body>
 {% include "header.html" %}
 <div class="container">
-
-    <div class="col-md-offset-2 col-md-10 col-sm-3 ">
+  <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+    <div class="col-md-offset-1 col-md-8">
 
         <h2 style="float:right">کدهای تخفیف</h2>
         <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
