--- a/admin_panel/templates/comments.html
+++ b/admin_panel/templates/comments.html
@@ -3,7 +3,10 @@
 {% include "header.html" %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12 col-sm-3 ">
+      <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+        <div class="col-md-offset-1 col-md-8">
             <h2 style="float:right">نظرات در یک نگاه</h2>
             <div class="box-content">
                 <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
