--- a/admin_panel/templates/enteghadat.html
+++ b/admin_panel/templates/enteghadat.html
@@ -3,7 +3,10 @@
 {% include "header.html" %}
 <div class="container">
 <h2 style="text-align: right"> انتقادات پیشنهادات</h2>
-    <div class="col-md-12 col-sm-3 ">
+  <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+    <div class="col-md-offset-1 col-md-8">
         <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
             <thead>
             <tr>
