--- a/admin_panel/templates/orders.html
+++ b/admin_panel/templates/orders.html
@@ -14,7 +14,10 @@
 
 <div class="container">
     <div class="row">
-        <div class="box col-md-12 col-sm-3 ">
+      <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+        <div class="col-md-offset-0 col-md-9">
             <h2 style="float:right">سفارشات</h2>
             <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
                 <thead>
