--- a/admin_panel/templates/show_product.html
+++ b/admin_panel/templates/show_product.html
@@ -5,7 +5,10 @@
 {% include "header.html" %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+          <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+        <div class="col-md-offset-1 col-md-8">
             <div class="row">
                 <div class="col-md-6 pull-right">
                     <h2 style="float:right"> {{ product_data.Name }}</i>
