--- a/admin_panel/templates/show_survey.html
+++ b/admin_panel/templates/show_survey.html
@@ -3,95 +3,103 @@
 {% include "header.html" %}
 <div class="container">
     <h2 style="float:right">نظرسنجی</h2>
-    <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
-        <thead>
-        <tr>
-            <th style="text-align: right"> تغییرات</th>
-            <th style="text-align: right">سوالات</th>
-            <th style="text-align: right">موضوع</th>
-            <th style="text-align: right">شماره</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            {% for survey in survey_data %}
-                <td style=" width: 16%;" class="center ">
-                    <div class="modal fade " id="surveymodal{{ survey.id }}" tabindex="0" role="dialog"
-                         aria-labelledby="surveymodal{{ survey.id }}" aria-hidden="true" style="padding-top: 9% ; ">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content" style="width: 100%">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">
-                                        نمایش محصول</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col-md-9">
-                                                <table class="table table-strpied table-bordered  responsive"
-                                                       style="width: 65%">
-                                                    <thead>
-                                                    <tr>
-                                                        <th rowspan="3" style="text-align: right"> سوالات</th>
-                                                    </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                    {% for question in survey.questions %}
+    <div class="col-md-3">
+        {% include "sidebar.html" %}
+    </div>
+    <div class="col-md-offset-1 col-md-8">
+        <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
+            <thead>
+            <tr>
+                <th style="text-align: right"> تغییرات</th>
+                <th style="text-align: right">سوالات</th>
+                <th style="text-align: right">موضوع</th>
+                <th style="text-align: right">شماره</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                {% for survey in survey_data %}
+                    <td style=" width: 16%;" class="center ">
+                        <div class="modal fade " id="surveymodal{{ survey.id }}" tabindex="0" role="dialog"
+                             aria-labelledby="surveymodal{{ survey.id }}" aria-hidden="true" style="padding-top: 9% ; ">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content" style="width: 100%">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">
+                                            نمایش محصول</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-md-9">
+                                                    <table class="table table-strpied table-bordered  responsive"
+                                                           style="width: 65%">
+                                                        <thead>
                                                         <tr>
-                                                            <td>{{ question.text }}
-                                                                <a href="/admin-panel/del_question?q_id={{ question.id }}">
-                                                                    <button type="button" class="btn btn-danger btn-sm"
-                                                                            style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
-                                                                        <i class="glyphicon glyphicon-trash icon-white"></i>
-                                                                        حذف
-                                                                    </button>
-                                                                </a>
-                                                            </td>
+                                                            <th rowspan="3" style="text-align: right"> سوالات</th>
                                                         </tr>
-                                                    {% endfor %}
-                                                    </tbody>
-                                                </table>
+                                                        </thead>
+                                                        <tbody>
+                                                        {% for question in survey.questions %}
+                                                            <tr>
+                                                                <td>{{ question.text }}
+                                                                    <a href="/admin-panel/del_question?q_id={{ question.id }}">
+                                                                        <button type="button"
+                                                                                class="btn btn-danger btn-sm"
+                                                                                style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
+                                                                            <i class="glyphicon glyphicon-trash icon-white"></i>
+                                                                            حذف
+                                                                        </button>
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        {% endfor %}
+                                                        </tbody>
+                                                    </table>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal"> بستن</button>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal"> بستن
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <a href="/admin-panel/del_survey?s_id={{ survey.id }}">
-                            <button type="button" class="btn btn-danger btn-sm"
-                                    style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
+                        <div class="row">
+                            <a href="/admin-panel/del_survey?s_id={{ survey.id }}">
+                                <button type="button" class="btn btn-danger btn-sm"
+                                        style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
 
-                                <i class="glyphicon glyphicon-trash icon-white"></i>
-                                حذف
+                                    <i class="glyphicon glyphicon-trash icon-white"></i>
+                                    حذف
+                                </button>
+                            </a>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="row">
+                            <button type="button" class="btn btn-success btn-sm"
+                                    style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small"
+                                    data-toggle="modal" data-target="#surveymodal{{ survey.id }}">
+
+                                <i class="glyphicon glyphicon-zoom-in icon-white"></i>نمایش
                             </button>
-                        </a>
-                    </div>
-                </td>
-                <td>
-                    <div class="row">
-                        <button type="button" class="btn btn-success btn-sm"
-                                style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small"
-                                data-toggle="modal" data-target="#surveymodal{{ survey.id }}">
+                            </a>
+                        </div>
+                    </td>
+                    <td style="text-align: right;direction: rtl">{{ survey.title }}</td>
+                    <td style="text-align: right;direction: rtl">{{ survey.id }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-                            <i class="glyphicon glyphicon-zoom-in icon-white"></i>نمایش
-                        </button>
-                        </a>
-                    </div>
-                </td>
-                <td style="text-align: right;direction: rtl">{{ survey.title }}</td>
-                <td style="text-align: right;direction: rtl">{{ survey.id }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 </div>
 {% include "footer.html" %}
 </body>
