--- a/admin_panel/templates/survey.html
+++ b/admin_panel/templates/survey.html
@@ -4,7 +4,10 @@
 <body>
 {% include "header.html" %}
 <div class="container">
-    <div class="card col-md-12">
+    <div class="col-md-3">
+			{% include "sidebar.html" %}
+		</div>
+    <div class="card col-md-offset-1 col-md-8">
         <h2 style="text-align: right;"> نظرسنجی</h2>
         <form role="form" action="/admin-panel/survey" id="add_survey" method="post"
               name="add_survey_form">
