--- a/admin_panel/templates/sidebar.html
+++ b/admin_panel/templates/sidebar.html
@@ -162,7 +162,7 @@ Licensed under MIT
                     تراکنش‌ها <i class="glyphicon glyphicon-user"></i></a>
             </li>
             <li>
-                <a href="#" target="_blank">
+                <a href="/admin-panel/tickets" target="_blank">
                     پشتیبانی <i class="glyphicon glyphicon-ok"></i></a>
             </li>
             <li>
