--- a/admin_panel/templates/show_product.html
+++ b/admin_panel/templates/show_product.html
@@ -8,6 +8,12 @@
     padding: 5px; /* Some padding */
     width: 150px; /* Set a small width */
 }
+    ul{
+        list-style-type: none;
+    }
+    .product_detail ul li{
+        border-bottom: 2px solid #5d6368;
+    }
     img:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
@@ -21,12 +27,13 @@
         padding-right: 2%;
 
         min-height: 40%;
-        background: #ebebe0;
+        background: #f5f5f0;
         border-radius: 5px;
 
     }
     .product_detail{
         margin: 10px 10px 10px 10px;
+        background: #f5f5f0;
 
     }
     .badge{
@@ -43,17 +50,18 @@
 		</div>
             <!-- Product Description -->
         <div class="col-md-offset-4">
+
             <div id="product_image" class="row">
                 <div class="col-md-4 pull-right">
                     <h3 style="direction: rtl;padding-bottom: 5%">{{ product_data.Name }}</h3>
                     <img class="img-thumbnail card-img-top" src='/{{ product_data.Image }}' alt="Card image cap" style="width: 100%;padding-top: 5%">
                     <div class="product_detail">
-                        <ul class="nav">
+                        <ul class="list-group">
                             <li style="padding-left: 40%">
-                                <h5 style="direction: rtl">قیمت<span class="badge badge-primary" style="margin-right: 3%;margin-left: 3%;height: 5%;padding-top: 3%">{{ product_data.Price }} تومان</span></h5>
+                                <h5 style="direction: rtl">قیمت<span class="badge badge-primary" style="background: #1a436b;margin-right: 3%;margin-left: 3%;height: 5%;padding-top: 5%">{{ product_data.Price }} تومان</span></h5>
                             </li>
                             <li style="padding-left: 50%">
-                                <h5 style="direction: rtl;">تعداد موجود<span class="badge badge-primary" style="margin-right: 3%;margin-left: 3%;height: 5%;padding-top: 3%">{{ product_data.Number }}</span> </h5>
+                                <h5 style="direction: rtl;">تعداد موجود<span class="badge badge-primary" style="background: #1a436b;margin-right: 3%;margin-left: 3%;height: 5%;padding-top: 6%">{{ product_data.Number }}</span> </h5>
                             </li>
 
                         </ul>
@@ -62,7 +70,7 @@
 
                 <div class="col-md-offset-2 col-md-6 " id="description" style="direction: rtl">
                     <h4> توضیحات :</h4>
-                    <p style="padding-right: 5%"> {{ product_data.Text }}</p>
+                    <p style="padding-right: 5%;"> {{ product_data.Text }}</p>
                     </div>
             </div>
         </div>
