--- a/admin_panel/templates/show_survey.html
+++ b/admin_panel/templates/show_survey.html
@@ -26,7 +26,7 @@
                                 <div class="modal-content" style="width: 100%">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">
-                                            نمایش محصول</h5>
+نمایش نظرسنجی</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
