--- a/admin_panel/templates/show_product.html
+++ b/admin_panel/templates/show_product.html
@@ -57,11 +57,11 @@
                     <img class="img-thumbnail card-img-top" src='/{{ product_data.Image }}' alt="Card image cap" style="width: 100%;padding-top: 5%">
                     <div class="product_detail">
                         <ul class="list-group">
-                            <li style="padding-left: 40%">
-                                <h5 style="direction: rtl">قیمت<span class="badge badge-primary" style="background: #1a436b;margin-right: 3%;margin-left: 3%;height: 5%;padding-top: 5%">{{ product_data.Price }} تومان</span></h5>
+                            <li>
+                                <h5 style="direction: rtl;text-align: right;padding: 4% 5% 0 0">قیمت : <span style="font-family: 'B Yekan'">{{ product_data.Price }}  تومان </span></h5>
                             </li>
-                            <li style="padding-left: 50%">
-                                <h5 style="direction: rtl;">تعداد موجود<span class="badge badge-primary" style="background: #1a436b;margin-right: 3%;margin-left: 3%;height: 5%;padding-top: 6%">{{ product_data.Number }}</span> </h5>
+                            <li>
+                                <h5 style="direction: rtl;text-align: right;padding: 0 5% 0 0">تعداد موجود : <span style="font-family: 'B Yekan'"> {{ product_data.Number }} </span> </h5>
                             </li>
 
                         </ul>
