--- a/admin_panel/templates/show_products.html
+++ b/admin_panel/templates/show_products.html
@@ -126,7 +126,7 @@
 
                                                 <div class="row">
 
-                                                    <img src="{{ data.4 }}"
+                                                    <img src="../{{ data.4 }}"
                                                          class="img img-thumbnail img-responsive"
                                                          style="">
                                                 </div>
@@ -167,7 +167,7 @@
                             </div>
 
                         </td>
-                        <td style="text-align: right;direction: rtl">{{ data.5 }}</td>
+                        <td style="text-align: right;direction: rtl;font-family: 'B Yekan'">{{ data.5 }}</td>
                         <td style="text-align: right;direction: rtl"><button type="button" class="btn btn-success btn-sm"
                                         style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small"
                                         data-toggle="modal" data-target="#showingmodal{{ data.0 }}">
