transaction ui and model add

--- a/admin_panel/templates/sidebar.html
+++ b/admin_panel/templates/sidebar.html
@@ -158,7 +158,7 @@ Licensed under MIT
                     اطلاعات شخصی <i class="glyphicon glyphicon-home"></i></a>
             </li>
             <li>
-                <a href="#">
+                <a href="/admin-panel/transactions">
                     تراکنش‌ها <i class="glyphicon glyphicon-user"></i></a>
             </li>
             <li>
