Product ad category & Feedback Done

--- a/admin_panel/templates/add_product.html
+++ b/admin_panel/templates/add_product.html
@@ -35,8 +35,8 @@
                                 </div>
                                 <div class="form-group" style="text-align: right">
                                     <label for="producttext">توضیحات</label>
-                                    <input style="text-align: right" type="text" class="form-control"
-                                           id="producttext" name="product_text" placeholder="">
+                                    <textarea style="text-align: right" type="text" class="form-control"
+                                           id="producttext" name="product_text" rows= "5" ></textarea>
                                 </div>
                                 <div class="form-group" style="text-align: right">
                                     <label for="productprice">قیمت</label>
