--- a/admin_panel/templates/advertise.html
+++ b/admin_panel/templates/advertise.html
@@ -11,7 +11,7 @@
         <thead>
         <tr>
             <th style="text-align: right">تغییرات</th>
-            <th style="text-align: right">عنوان نبلیغ</th>
+            <th style="text-align: right">عنوان تبلیغ</th>
         </tr>
         </thead>
         <tbody>
@@ -24,7 +24,7 @@
                 <i class="glyphicon glyphicon-trash icon-white"></i>
                 حذف
             </a>
-                <a class="btn btn-info" >
+                <a class="btn btn-info"  href="/admin-panel/ed_ad?ad_id={{advertise.ad_id}}">
                 <i class="glyphicon glyphicon-edit icon-white"></i>
                     تغییر
             </a>
