discount code completed

--- a/admin_panel/templates/add_code.html
+++ b/admin_panel/templates/add_code.html
@@ -13,6 +13,11 @@
                 <input style="text-align: right" type="text" class="form-control" id="code_char"
                        name="code_char" placeholder="">
             </div>
+            <div class="form-group" style="text-align: right">
+                <label for="percentage">کد تخفیف</label>
+                <input style="text-align: right" type="number" min = "0" max="100" class="form-control" id="code_char"
+                       name="percentage" placeholder="">
+            </div>
             <button style="margin-left: 90% ; width: 10% ; font-size: medium" type="submit"
                     class="btn btn-primary btn-round">تایید
             </button>
